# RoughBench

./: .gitignore  README.md  pyproject.toml
configs/: ou_process.toml  rough_ou_process.toml
roughbench/generate_data/: generate_phi34.py  generate_rough_ou_process.py  generate_rough_volatility.py  genererate_ou_process.py  plot_rl_fbm_variance_slope.py  utils.py
roughbench/manifold_rde/: oxford_multimotion_so3.py
roughbench/rde/: drivers.py  ou_process.py  plot_hparam_evolution.py  rough_ou_process.py  rough_volatility.py  rp_kalman.py
roughbench/rde_types/: augmentations.py  paths.py  wong_zakai.py
roughbench/rough_paths/: metrics_and_norms.py
roughbench/spde/: drivers.py  phi34.py
tests/test_rde/: test_drivers.py  test_ou_process.py  test_rough_ou_process.py  test_rough_volatility.py
tests/test_spde/: test_phi34.py
