[project]
name = "roughbench"
version = "0.1.2"
description = "A benchmark for rough path methods."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Luke Thompson", email = "luke.thompson@sydney.edu.au" }]
maintainers = [
    { name = "Luke Thompson", email = "luke.thompson@sydney.edu.au" },
]
keywords = [
    "jax",
    "rough-paths",
    "machine-learning",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.6.0",
    "diffrax>=0.7.0",
    "quicksig @ git+https://github.com/luke-a-thompson/QuickSig.git",
]

[project.urls]
"Homepage" = "https://github.com/luke-a-thompson/RoughBench"
"Bug Reports" = "https://github.com/luke-a-thompson/RoughBench/issues"
"Source" = "https://github.com/luke-a-thompson/RoughBench"
"Documentation" = "https://github.com/luke-a-thompson/RoughBench/blob/master/README.md"

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.6.0"]
dev = [
    "lovely-jax>=0.1.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-timeout>=2.3.1",
    "mypy>=1.8.0",
    "matplotlib>=3.10.1",
    "signax>=0.2.1",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
]
all = ["roughbench[cuda,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["roughbench"]

[tool.hatch.build.targets.sdist]
include = ["/roughbench", "/tests", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=roughbench --cov-report=term-missing"
minversion = "8.0"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
